Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
-    https://goo.gl/maps/18HfNbHzcCKtheZdA
-
+    
     <!-- Create an iframe tag-->
-    <iframe></iframe>
+    <iframe src="https://goo.gl/maps/18HfNbHzcCKtheZdA"></iframe>
 
   </body>
 </html>
