--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>For all your incorporated company needs</h2>
     
     <!-- Create an iframe tag-->
-    <iframe src="https://goo.gl/maps/18HfNbHzcCKtheZdA"></iframe>
+    <iframe src="https://goo.gl/maps/18HfNbHzcCKtheZdA" width="100%"></iframe>
 
   </body>
 </html>
